# pydantic-vcon

./: .gitignore  LICENSE  README.md  pyproject.toml
db/: README.md  schema.sql
examples/: basic_usage.py
pydantic_vcon/: __init__.py  models.py
tests/: test_vcon.py
